[project]
name = "cronicle-exporter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "avigano", email = "alvistar@gmail.com" }
]
dependencies = [
    "prometheus-client>=0.20.0",
    "click>=8.1.7",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"cronicle-exporter" = "cronicle_exporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cronicle_exporter"]
